[package]
name = "carbon-simple-dex-decoder-v1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = []

serde = ["dep:serde"]

[dependencies]
carbon-core = { git = "https://github.com/sevenlabs-hq/carbon.git", branch = "v1.0-rc", features = ["macros"], default-features = false }
borsh = { version = "1.5.1", features = ["derive"] }
solana-pubkey = { version = "^3.0.0", features = ["borsh"] }
solana-account = "^3.0.0"
solana-instruction = { version = "^3.0.0", default-features = false }
serde_json = "1.0.145"

serde = { version = "1.0.228", features = ["derive"], optional = true }


[dev-dependencies]
carbon-test-utils = { git = "https://github.com/sevenlabs-hq/carbon.git", branch = "v1.0-rc" }
